<resources>
    <string name="facebook_app_id">423461378163384</string>
    <string name="fb_login_protocol_scheme">fb423461378163384</string>
    <string name="WEB_CLIENT_ID">910548783558-d1ucnqphc7v9ks5smkpkp8ajmlnla2mh.apps.googleusercontent.com</string>

    <string name="app_name">GameMe</string>
    <string name="title_home">Home</string>
    <string name="title_new">New</string>
    <string name="title_profile">Profile</string>

    <!--Login -->
    <string name="exit_app">Exit GamMe</string>
    <string name="are_u_sure_exit">Are you sure, do you want to Exit App?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Login, Please wait..</string>
    <string name="skip_login">Skip login</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="register_now">Register Now!</string>
    <string name="forget_password">Forgot password</string>
    <string name="no_internet">No internet connection</string>
    <string name="completed">Completed ;)</string>
    <string name="wait">Please wait…</string>
    <!--Regs-->
    <string name="new_here">New here?</string>
    <string name="create_account">Create an account</string>
    <string name="or_using">OR using</string>
    <string name="username_taken_before">this username is taken before</string>
    <string name="creating_account">creating account …</string>
    <string name="continue_to_home">Continue</string>
    <string name="user_name">\@username</string>
    <string name="full_name">Full name</string>
    <string name="email_taken_before">The email address is already in use by another account.</string>
    <string name="email_badly_formatted">The email address is badly formatted.</string>
    <string name="username_is_required">username is required</string>
    <string name="set_your_username_to_get_in_touch_with_other_users">set your username to get in touch with other users</string>
    <!--Reset password-->
    <string name="email_sent_to_address">an email has been sent to your email address</string>
    <string name="email_not_exist">this email doesn\'t exist</string>
    <string name="cant_send_email">couldn\'t send reset email</string>
    <string name="reset_note">Please note that this feature is only for users that registered with email and password</string>
    <string name="reset_password">Reset Password</string>

    <!--post -->
    <string name="are_u_sure">Are you sure?</string>
    <string name="delete_post">Delete this post!</string>
    <string name="delete_answer">Delete this answer!</string>
    <string name="delete_success">Deleted successfully</string>
    <string name="ok">Ok</string>
    <string name="new_question">New Question</string>
    <string name="new_post">New Post</string>
    <string name="post">Post</string>
    <string name="submit">Submit</string>
    <string name="delete_failed">Delete failed!</string>
    <string name="write_something">Write something</string>
    <string name="write_question">Write your question</string>
    <string name="question_uploaded">Posted successfully</string>
    <string name="loading">Loading, please wait…</string>
    <string name="there_s_no_answers">Nothing to do here.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="comment">Comment</string>

    <!--Full screen image-->
    <string name="details_image">details_image</string>
    <string name="download_image">Download image</string>
    <string name="saving_image">Downloading image…</string>
    <string name="saved_to_gallery">Image has been downloaded</string>

    <!-- time format class="TimeCalculator"-->
    <string name="time_format">yyyy-MM-dd\'T\'HH:mm:ss</string>
    <string name="now">Now</string>
    <string name="minute_ago">" minute ago"</string>
    <string name="minute">" minute"</string>
    <string name="hour_ago">" hour ago"</string>
    <string name="hour">" hour"</string>
    <string name="yesterday">yesterday</string>
    <string name="day">" day "</string>
    <string name="generic_error">Some thing went wronge! please try again.</string>
    <string name="write_a_comment">Write something</string>
    <!--Post details-->
    <string name="send">Send comment</string>
    <string name="replay">Replay</string>
    <string name="dot">•</string>
    <string name="likes">Likes</string>
    <string name="no_comments">No comments yet!</string>
    <string name="post_header">post header</string>
    <string name="thank_you">Thank you for your feedback</string>
    <string name="vote_failed">Vote failed</string>

    <!--Profile-->
    <string name="logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="posts">Posts</string>
    <string name="answers_count">Answers</string>
    <string name="votes_count">Votes</string>
    <!--profilePostsFragment-->
    <string name="we_are_excited">We\'re excited to see your first post :)</string>
    <string name="user_still_searcing">This user is still looking for amazing stuff to post</string>
    <string name="profile_not_found">Profile not found</string>
    <string name="latest_posts">Latest Posts</string>
    <string name="no_posts">No posts yet.</string>
    <!--Report reasons-->
    <string name="why_are_you_reporting_this_user">why are you reporting this user?</string>
    <string name="this_is_fake_profile">this is fake profile</string>
    <string name="this_user_annoying_me">this user annoying me</string>
    <string name="they_re_sharing_inappropriate_or_offensive_posts">they\'re sharing inappropriate or offensive posts</string>
    <!--Accessibility -->
    <string name="down_vote_button">Down Vote Button</string>
    <string name="up_vote_button">Up Vote Button</string>
    <string name="like_button">Like Button</string>
    <string name="add_new_photo_button">Add new photo button</string>
    <string name="icon">icon</string>
    <string name="mark_as_answer_button">Mark as answer button</string>
    <string name="more_options_button">More options button</string>
    <string name="normal_post_button">normal post button</string>
    <string name="question_post_button">question post button</string>
    <string name="logo">logo</string>
    <string name="profile_image">profile image</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="login_failed">Login Failed</string>
    <string name="reg_failed">Failed to register your account</string>
    <string name="invalid_email_password">Invalid email/password ,please try again!</string>
    <string name="login_canceled">Login Canceled</string>
    <string name="unsupported_username_hint"># user name Length at least 3 characters and maximum length of 10</string>
    <string name="unsupported_username_hint_1"># username can contain  a-z, 0-9, underscore, hyphen</string>
    <string name="can_not_upload">Couldn\'t upload your image</string>
    <string name="must_upload_or_write">Write your status or choose an image to continue</string>
    <string name="permission_needed">Permission is needed to download image</string>
    <string name="click_back_again">Click Back again to exit</string>
    <string name="counter_default_value">0</string>


</resources>
