<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vote_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_centerVertical="true"
    android:layout_marginStart="@dimen/dp_8"
    android:orientation="horizontal">


    <ImageButton
        android:id="@+id/down_vote_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:contentDescription="@string/down_vote_button"
        android:padding="@dimen/dp_4"
        android:src="@drawable/ic_arrow_drop_down_circle_white_24dp"
        android:tint="@color/icons_gray" />

    <TextView
        android:id="@+id/vote_count_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:clickable="false"
        android:text="@string/counter_default_value"
        android:textColor="@color/secondary_text" />


    <ImageButton
        android:id="@+id/up_vote_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:contentDescription="@string/up_vote_button"
        android:padding="@dimen/dp_4"
        android:rotation="180"
        android:src="@drawable/ic_arrow_drop_down_circle_white_24dp"
        android:tint="@color/icons_gray" />

</LinearLayout>